@@ -1,5 +1,10 @@
 2018-12-16  Tom Tromey  <tom@tromey.com>
 
+	* symfile.c (reread_symbols): Call objfile->reset_psymtabs.
+	* objfiles.h (objfile::reset_psymtabs): New method.
+
+2018-12-16  Tom Tromey  <tom@tromey.com>
+
 	* symmisc.c (print_symbol_bcache_statistics): Update.
 	(print_objfile_statistics): Update.
 	* symfile.c (reread_symbols): Update.
